# CrowPanel-2.1inch-HMI-ESP32-Rotary-Display-480-480-IPS-Round-Touch-Knob-Screen

./: readme.md
Eagle_SCH&PCB/: ESP32_Display_2.1(K)_Main_V1.0.brd  ESP32_Display_2.1(K)_Main_V1.0.sch
example/ESP32S3-Rotary-screen_2_1/ESP32_Display_2_1-1/: ESP32_Display_2_1-1.ino
example/libraries/CIRCUITSTATE_CST328_Library/: Changes.md  LICENSE  README.md  keywords.txt  library.json  library.properties
example/libraries/UI/: ui.c  ui.h  ui_Screen0.c  ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_img_1643306962.c  ui_img_1761703117.c  ui_img_1961151970.c  ui_img_573924602.c  ui_img_667923968.c  ui_img_829316181.c  ui_img_bar_light_02_png.c  ui_img_bar_oven_02_png.c  ui_img_bar_washing_01_png.c  ui_img_icon_oven_settings_temp_01_png.c  (+9 more)
example/ui_project/SLS_2_1v2-20250807/SLS_480v2/Export/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen0.c  ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_comp.c  ui_comp.h  ui_comp_cpn_img0rb0.c  ui_comp_cpn_img0rb0.h  ui_comp_hook.c  ui_comp_hook.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_bar_black_png.c  ui_img_bar_blue_png.c  ui_img_bar_orange_png.c  ui_img_bar_white_png.c  ui_img_bar_yellow_png.c  ui_img_s0brown_png.c  ui_img_s0gold_png.c  ui_img_s0rb0_png.c  ui_img_s0rb1_png.c  ui_img_s1bg_png.c  ui_img_s1light1_png.c  ui_img_s1light2_png.c  ui_img_s1select_png.c  ui_img_s1temp1_png.c  ui_img_s1temp2_png.c  ui_img_s1volume1_png.c  ui_img_s1volume2_png.c  ui_img_s2icon_png.c  ui_img_s3icon_png.c  ui_img_s4icon_png.c  ui_img_to128_s1light1_png.c  ui_img_to128_s1light2_png.c  (+7 more)
(+12 files in other folders)
