SET(SOURCES ui_comp_cpn_img0rb0.c
    ui_comp.c
    ui_Screen0.c
    ui_Screen1.c
    ui_Screen2.c
    ui_Screen3.c
    ui_Screen4.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    ui_img_s0rb1_png.c
    ui_img_s0rb0_png.c
    ui_img_s0brown_png.c
    ui_img_s0gold_png.c
    ui_img_s1bg_png.c
    ui_img_s1select_png.c
    ui_img_s1volume1_png.c
    ui_img_s1volume2_png.c
    ui_img_s1temp1_png.c
    ui_img_s1temp2_png.c
    ui_img_s1light1_png.c
    ui_img_s1light2_png.c
    ui_img_v2_bj_volume_png.c
    ui_img_bar_blue_png.c
    ui_img_bar_white_png.c
    ui_img_s2icon_png.c
    ui_img_v2_bj_temp_png.c
    ui_img_bar_orange_png.c
    ui_img_bar_black_png.c
    ui_img_s3icon_png.c
    ui_img_v2_bj_light_png.c
    ui_img_bar_yellow_png.c
    ui_img_s4icon_png.c
    ui_img_to128_s1light1_png.c
    ui_img_to128_s1light2_png.c
    ui_img_to128_s1temp1_png.c
    ui_img_to128_s1temp2_png.c
    ui_img_to128_s1volume1_png.c
    ui_img_to128_s1volume2_png.c)

add_library(ui ${SOURCES})
